syntax = "proto3";

import "erlang_term.proto";

message LogEntry {

    /**
     * The supported log entry types.
     */
    enum Type {
        OP_PARAMS = 1;
        OP_SPEC = 2;
        OP_LAMBDA = 3;
        OP_EVALUATED_CLOSURE = 4;
        OP_FRESH_LAMBDA_WITH_ARITY = 5;
        OP_NOT_LAMBDA_WITH_ARITY = 6;
        OP_GUARD_TRUE = 7;
        OP_GUARD_FALSE = 8;
        OP_MATCH_EQUAL_TRUE = 9;
        OP_MATCH_EQUAL_FALSE = 10;
        OP_TUPLE_SZ = 11;
        OP_TUPLE_NOT_SZ = 12;
        OP_TUPLE_NOT_TPL = 13;
        OP_LIST_NON_EMPTY = 14;
        OP_LIST_EMPTY = 15;
        OP_LIST_NOT_LST = 16;
        OP_SPAWN = 17;
        OP_SPAWNED = 18;
        OP_MSG_SEND = 19;
        OP_MSG_RECEIVE = 20;
        OP_MSG_CONSUME = 21;
        OP_UNFOLD_TUPLE = 22;
        OP_UNFOLD_LIST = 23;
        OP_BOGUS = 24;
        OP_FLOAT = 25;
        OP_LIST_TO_TUPLE = 26;
        OP_TUPLE_TO_LIST = 27;
        OP_IS_INTEGER = 28;
        OP_IS_ATOM = 29;
        OP_IS_FLOAT = 30;
        OP_IS_LIST = 31;
        OP_IS_TUPLE = 32;
        OP_IS_BOOLEAN = 33;
        OP_IS_NUMBER = 34;
        OP_IS_BITSTRING = 35;
        OP_IS_FUN = 36;
        OP_IS_FUN_WITH_ARITY = 37;
        OP_PLUS = 38;
        OP_MINUS = 39;
        OP_TIMES = 40;
        OP_RDIV = 41;
        OP_IDIV_NAT = 42;
        OP_REM_NAT = 43;
        OP_UNARY = 44;
        OP_POW = 45;
        OP_TRUNC = 46;
        OP_ATOM_NIL = 47;
        OP_ATOM_HEAD = 48;
        OP_ATOM_TAIL = 49;
        OP_HD = 50;
        OP_TL = 51;
        OP_CONS = 52;
        OP_TCONS = 53;
        OP_EQUAL = 54;
        OP_UNEQUAL = 55;
        OP_LT_INT = 56;
        OP_LT_FLOAT = 57;
        OP_MAKE_BITSTR = 58;
        OP_EMPTY_BITSTR = 59;
        OP_NONEMPTY_BITSTR = 60;
        OP_CONCAT_SEGS = 61;
        OP_BITMATCH_CONST_TRUE = 62;
        OP_BITMATCH_CONST_FALSE = 63;
        OP_BITMATCH_VAR_TRUE = 64;
        OP_BITMATCH_VAR_FALSE = 65;
        OP_BAND = 66;
        OP_BXOR = 67;
        OP_BOR = 68;
    }

    Type type = 1;
    repeated ErlangTerm arguments = 2;
}
